added new components

--- a/src/_nav.scss
+++ b/src/_nav.scss
@@ -4,7 +4,7 @@
 
     a {
       float: left;
-      color: $background-color;
+      color: $light-grey;
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
