--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,2 +1,13 @@
-$background-color: #f2f2f2;
-$primary-color: #4CAF50;
+$dark-grey: #28353D;
+$light-grey: #E6E6E6;
+$light-blue: #AAC7D7;
+$blue-grey: #758A95;
+$white: white;
+$black: black;
+
+
+//font@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+/*Define font families*/
+//font@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+$font-family-header: 'Nunito+Sans';
+$font-family-body: 'Roboto';
