--- a/src/_breadcrumb.scss
+++ b/src/_breadcrumb.scss
@@ -3,6 +3,7 @@ ul.breadcrumb {
   padding: 10px 16px;
   list-style: none;
   background-color: #eee;
+  border: 1 px black
 }
 
 /* Display list items side by side */
