--- a/src/_button.scss
+++ b/src/_button.scss
@@ -1,7 +1,7 @@
 .button {
-    background-color: $primary-color;
+    background-color: $light-blue;
     border: none;
-    color: white;
+    color: black;
     padding: 16px 32px;
     text-align: center;
     text-decoration: none;
@@ -12,10 +12,10 @@
     cursor: pointer;
 
     &:hover {
-        background-color: darken($primary-color, 20%);
+        background-color:$dark-grey;
       }
       
     &:active {
-        background-color: lighten($primary-color, 20%);
+        background-color: $blue-grey;
     }
 }
