--- a/src/_card.scss
+++ b/src/_card.scss
@@ -1,10 +1,12 @@
 .card {
-   
+    display: flex;
+    flex-direction: column;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     padding: 10px;
     margin: auto;
-    width: 50%;
+    transition: 0.3s;
+    border-radius: 5px; 
   }
   
  
@@ -14,15 +16,16 @@
   
  
   .container {
+    display: flex;
     padding: 2px 16px;
-  }
-  .card {
+    width: 50%;
+    height: 200px;
+    border: black 1px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    border-radius: 5px; 
   }
   
   /* Add rounded corners to the top left and the top right corner of the image */
   img {
     border-radius: 5px 5px 0 0;
+    border:  1px black;
   }
