--- a/src/_containers.scss
+++ b/src/_containers.scss
@@ -3,6 +3,8 @@
     min-width: 1440px;
     
     &-flex {
-        min-width: 100vw;;
+        min-width: 100vw;
+        height: 200px;
+        border: black 2 px;
     }
 }
